@@ -1,3 +1,8 @@
+2008-04-16  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/35662
+	* gfortran.dg/pr35662.f90: New test.
+
 2008-04-15  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/loop_optimization1.ad[sb]: New test.
